# GALA-GNN-Acceleration-LAnguage

./: .gitignore  CMakeLists.txt  README.md
Data/: README.md
tests/: CMakeLists.txt  aten_test.cpp  common.h  gala.cpp  gala_gat_IR.cpp  gala_gcn_IR.cpp  gala_gin_IR.cpp  gala_inference.cpp  gala_inference_long.cpp  gala_inference_sample.cpp  gala_sage_IR.cpp  gala_train.cpp  gala_train_memory.cpp  gat_pretiling_test.cpp  gat_test.cpp  gcn_model.cu  gcn_pretiling_test.cpp  gcn_test.cpp  gcn_test_IR.cpp  spade_codegen_sddmm_test.cpp  spade_codegen_spmm_test.cpp  spade_cpu_spmm_impl.cpp  spade_cpu_spmm_impl_bulk.cpp  spade_cpu_spmm_impl_bulk2.cpp  spade_cpu_spmm_impl_test_barrierless.cpp  spade_cpu_spmm_impl_test_slice.cpp  spade_graph_data.cpp  torch_api_cusparse_gcn.cpp  unit_codegen_spmm.cpp  unit_test_IR.cpp
tests/Baselines/DGL/: benchmark_dgl_gat.py  benchmark_dgl_gcn.py  benchmark_dgl_gcn_memory.py  benchmark_dgl_gcn_node_sampling.py  benchmark_dgl_gin.py  benchmark_dgl_sage.py  common.py
tests/Baselines/SeaStar/: benchmark_sea_gat.py  benchmark_sea_gcn.py  benchmark_sea_gin.py  benchmark_sea_sage.py  gala_gatconv_sea.py  gala_ginconv_sea.py  gala_graphconv_sea.py  gala_sageconv_sea.py
tests/Baselines/SparseTIR/: gcn.py  gin.py  sage.py  utils.py
tests/GALA-DSL/ablations/input-optimize/: Products.txt  Reddit.txt  ogbn-products.txt
tests/GALA-DSL/ablations/memory-comsuption/: memory.txt  time.txt
tests/GALA-DSL/ablations/memory-consumption/: time.txt
tests/GALA-DSL/ablations/sampling/data/: Reddit.txt  ogbn-products.txt
tests/GALA-DSL/ablations/sampling/dynamic/: Products.txt  Reddit.txt  ogbn-products.txt
tests/GALA-DSL/ablations/sampling/kernel/: Reddit.txt  ogbn-products.txt
tests/GALA-DSL/ablations/sampling/no-sampling/: Products.txt  Reddit.txt  ogbn-products.txt
tests/GALA-DSL/ablations/scalability/: 2_1024.txt  2_128.txt  2_256.txt  2_512.txt  2_64.txt  3_1024.txt  3_128.txt  3_256.txt  3_32.txt  3_512.txt  3_64.txt  4_1024.txt  4_128.txt  4_256.txt  4_32.txt  4_512.txt  4_64.txt  8_1024.txt  8_128.txt  8_256.txt  8_32.txt  8_512.txt  8_64.txt  graph_1.txt  graph_10.txt  graph_2.txt  graph_20.txt  graph_5.txt
tests/GALA-DSL/ablations/speedups/cir-vs-dir/: cir.txt  dir.txt
tests/GALA-DSL/ablations/speedups/cir-vs-dir/Products/: all.txt  cir.txt  dir.txt  none.txt
tests/GALA-DSL/ablations/speedups/cir-vs-dir/Reddit/: none.txt
tests/GALA-DSL/ablations/speedups/inter-vs-intra/Reddit/: a1.txt  a2.txt  a3.txt  e1.txt  fo.txt
tests/GALA-DSL/ablations/speedups/inter-vs-intra/ogbn-products/: a1.txt  a2.txt  a3.txt  e1.txt  e2.txt  fo.txt  uo.txt
tests/GALA-DSL/ablations/speedups/training/: fo.txt  t1.txt  t2.txt
tests/GALA-DSL/gat/Cora/: a100.txt  h100.txt
tests/GALA-DSL/gat/CoraFull/: a100.txt  h100.txt
tests/GALA-DSL/gat/Products/: h100.txt
tests/GALA-DSL/gat/Pubmed/: a100.txt  h100.txt
tests/GALA-DSL/gat/Reddit/: a100.txt  h100.txt
tests/GALA-DSL/gat/ogbn-arxiv/: a100.txt  h100.txt
tests/GALA-DSL/gat/ogbn-products/: a100.txt  h100.txt
tests/GALA-DSL/gcn/Cora/: a100.txt  h100.txt
tests/GALA-DSL/gcn/CoraFull/: a100.txt  h100.txt
tests/GALA-DSL/gcn/Pubmed/: a100.txt  h100.txt
tests/GALA-DSL/gcn/Reddit/: h100.txt
tests/GALA-DSL/gcn/ogbn-arxiv/: a100.txt  h100.txt
tests/GALA-DSL/gcn/ogbn-products/: a100.txt  h100.txt
tests/GALA-DSL/gin/Arxiv/: a100.txt  h100.txt
tests/GALA-DSL/gin/Cora/: a100.txt  h100.txt
tests/GALA-DSL/gin/CoraFull/: a100.txt  h100.txt
tests/GALA-DSL/gin/Products/: a100.txt  h100.txt
tests/GALA-DSL/gin/Pubmed/: a100.txt  h100.txt
tests/GALA-DSL/gin/Reddit/: a100.txt  h100.txt
tests/GALA-DSL/gin/ogbn-arxiv/: a100.txt  h100.txt
tests/GALA-DSL/gin/ogbn-products/: a100.txt  h100.txt
tests/GALA-DSL/sage/Arxiv/: a100.txt
tests/GALA-DSL/sage/Cora/: a100.txt  h100.txt
tests/GALA-DSL/sage/CoraFull/: a100.txt  h100.txt
tests/GALA-DSL/sage/Products/: a100.txt  h100.txt
tests/GALA-DSL/sage/Pubmed/: a100.txt  h100.txt
tests/GALA-DSL/sage/Reddit/: a100.txt  h100.txt
tests/GALA-DSL/sage/ogbn-arxiv/: a100.txt  h100.txt
tests/GALA-DSL/sage/ogbn-products/: a100.txt  h100.txt
tests/cpu_implementation/: CMakeLists.txt  npy_gcn_model.cpp
tests/dgSparse/: CMakeLists.txt  gcn_model.cu  gcn_model_col_tile.cu  gcn_model_col_tile2.cu
tests/example_ir/: example_ir  gala_gcn_IR.cpp
tests/gather-extension/: gather.cpp  gather.py  setup.py  test_gather.py
tests/gather-extension/gemm/: CMakeLists.txt  explore_script.sh  gather.cpp  gather.py
tests/gather-extension/separate_cmake/: CMakeLists.txt  explore_script.sh  gather.cpp  gather.py  test_gather.py
tests/gather-extension/separate_cmake_cuda/: CMakeLists.txt  explore_script.sh  gather.cu  gather.py  test_gather.py
tests/input/: basic_system.txt  gat.txt  gcn.txt  gin.txt  input.txt
tests/lltm-extension/: lltm.py  test_lltm.py
tests/torch_cpp/: CMakeLists.txt  fwd_gala.sh  gather.cu  gcn_model.cpp  gcn_model.cu  gcn_model_col_tile.cu  gcn_model_col_tile_tir.cu  gcn_model_col_tile_tir_mask.cu  gcn_model_col_tile_tir_op.cu  gcn_model_col_tile_tir_op_tim.cu  gcn_model_col_tile_tir_sample.cu  gcn_model_cusparse.cu  gcn_model_gpt.cu  gcn_model_tir.cu  gcn_model_tir_base.cu  gcn_model_tir_dcsr.cu  kernels.cu  npy_gat_model_col_tile_tir_op.cu  npy_gat_model_col_tile_tir_op_sparse.cu  npy_gat_model_col_tile_tir_op_tim2_glob.cu  npy_gcn_model.cu  npy_gcn_model_col_tile_tir.cu  npy_gcn_model_col_tile_tir_op.cu  npy_gcn_model_col_tile_tir_op_cus.cu  npy_gcn_model_col_tile_tir_op_sample.cu  npy_gcn_model_col_tile_tir_op_sample_data.cu  npy_gcn_model_col_tile_tir_op_sparse.cu  npy_gcn_model_col_tile_tir_op_sweep.cu  npy_gcn_model_col_tile_tir_op_tim.cu  npy_gcn_model_col_tile_tir_op_tim2.cu  npy_gcn_model_col_tile_tir_op_tim2_glob.cu  npy_gcn_model_col_tile_tir_op_tim2_glob_sparse.cu  npy_gcn_model_col_tile_tir_op_tim2_ogbn.cu  npy_gcn_model_test.cu  npy_gcn_model_tir_base.cu  npy_gcn_model_tir_base_masked_graph.cu  npy_gcn_model_tir_base_sample.cu  npy_gin_model_col_tile_tir_op.cu  npy_gin_model_col_tile_tir_op_tim2_glob.cu  npy_sddvv_test.cu  (+1 more)
(+198 files in other folders)
